--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -8,7 +8,7 @@ scrape_configs:
     scheme: 'https'        # Render fuerza TLS, es mandatorio
     static_configs:
       # IMPORTANTE: Reemplaza este target con tu URL de producción real que ya desplegaste
-      - targets: ['https://life-calendar-cfo3.onrender.com'] 
+      - targets: ['life-calendar-cfo3.onrender.com'] 
         labels:
           environment: 'production'
           service: 'life-calendar'
